fix tweet text going off the page on mobile

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -979,6 +979,13 @@ body , html{
 	position: relative;
 	overflow: visible;
 	margin: 70px 0 125px 0;
+
+	@include breakpoint(mobile) {
+
+		margin-bottom: 70px;
+
+	}
+
 }
 
 
@@ -1005,7 +1012,7 @@ body , html{
 		}
 
 		@include breakpoint(mobile) {
-			padding: 20px;
+			padding: 20px 0px;
 			border:none;
 
 		}
@@ -1018,7 +1025,7 @@ body , html{
 
 		@include breakpoint(mobile) {
 
-			padding: 20px;
+			padding: 20px 0px;
 			border:none;
 
 		}
@@ -1090,6 +1097,12 @@ body , html{
 	margin-bottom: 5px;
 	color:$blue;
 	font-weight: bold;
+
+	@include breakpoint(mobile) {
+
+		font-size: 1.2rem;
+
+	}
 
 }
 
